--- a/translations/de_DE.json
+++ b/translations/de_DE.json
@@ -5,7 +5,34 @@
     }
 ],
 "websiteTitle": "Gasometer Münster",
-"username": "Nutzername",
+"username": "Login",
 "password": "Passwort",
-"loginButton": "Einloggen"
+"loginButton": "Einloggen",
+"loginFailed": "Dein Login oder Passwort ist leider falsch :(",
+"passwordUnmatch": "Die Passwörter stimmen nicht überein",
+
+"home": "Home",
+
+
+"postOverview": "Blog Übersicht",
+"createPost": "Blogeintrag erstellen",
+"staticOverview": "Statische Seiten",
+"createStatic": "Statische Seite erstellen",
+"userOverview": "Benutzerübersicht",
+
+"ID": "ID",
+"displayName": "Anzeigename",
+"isAdmin": "Admin?",
+"createdAt": "Erstellt am",
+"createdBy": "Erstellt von",
+"actions": "Aktionen",
+"edit": "Bearbeiten",
+
+"usernamePlaceholder": "hans",
+"displayNamePlaceholder": "Hans Wurst",
+"repeatPassword": "Passwort wiederholen",
+"isAdminCheckbox": "Ist Admin",
+"deleteUserCheckbox": "Benutzer:in löschen",
+"createUserButton": "Erstellen"
+
 }
