--- a/translations/de_DE.json
+++ b/translations/de_DE.json
@@ -1,4 +1,8 @@
-{"mainMenu": [
+{
+    "translationLang": "de_DE",
+    "translationLangName": "Deutsch",
+    "translationLangNameEnglish": "German",
+    "mainMenu": [
     {
         "link": "/",
         "text": "Home"
@@ -19,9 +23,13 @@
 "staticOverview": "Statische Seiten",
 "createStatic": "Statische Seite erstellen",
 "userOverview": "Benutzerübersicht",
+"logoff": "Ausloggen",
 
 "ID": "ID",
 "displayName": "Anzeigename",
+"postName": "Beitragsname",
+"postCategories": "Kategorien",
+"postIsVisible": "Sichtbar",
 "isAdmin": "Admin?",
 "createdAt": "Erstellt am",
 "createdBy": "Erstellt von",
@@ -33,6 +41,15 @@
 "repeatPassword": "Passwort wiederholen",
 "isAdminCheckbox": "Ist Admin",
 "deleteUserCheckbox": "Benutzer:in löschen",
-"createUserButton": "Erstellen"
+"createUserButton": "Erstellen",
+
+"createPostHeader": "Neuen Beitrag erstellen",
+"editPostHeader": "Beitrag bearbeiten",
+"createPostButton": "Beitrag erstellen",
+"postTitle": "Titel",
+"languageShortcode": "Sprachkürzel",
+"titleExistedError": "Es existiert bereits ein Beitrag mit diesem Namen."
+
+
 
 }
